# traitement_video

./: accelerate.ipynb  convert_lower.ipynb  convert_mp4.ipynb  pyproject.toml
