[tool.poetry]
name = "traitement-video"
version = "0.1.0"
description = ""
authors = ["nicolas.debeissat"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
